Update readme file

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -54,7 +54,7 @@
     "!python -u run.py --task_name classification --is_training 1 --root_path ./dataset/ADFD/ --model_id ADFD-Dep --model Transformer --data ADFD-Dependent --e_layers 6 --batch_size 128 --d_model 128 --d_ff 256 --des 'Exp' --itr 5 --learning_rate 0.0001 --train_epochs 100 --patience 10\n",
     "\n",
     "# Medformer\n",
-    "!python -u run.py --task_name classification --is_training 1 --root_path ./dataset/ADFD/ --model_id ADFD-Dep --model Medformer --data ADFD-Dependent --e_layers 6 --batch_size 128 --d_model 128 --d_ff 256 --patch_len_list 2,4,8,8,16,16,16,16,32,32,32,32,32,32,32,32 --augmentations drop0.5 --swa --des 'Exp' --itr 5 --learning_rate 0.0001 --train_epochs 100 --patience 10"
+    "!python -u run.py --task_name classification --is_training 1 --root_path ./dataset/ADFD/ --model_id ADFD-Dep --model Medformer --data ADFD-Dependent --e_layers 6 --batch_size 128 --d_model 128 --d_ff 256 --patch_len_list 1,2,4 --augmentations none,jitter,scale,drop --des 'Exp' --itr 5 --learning_rate 0.0001 --train_epochs 100 --patience 10"
    ],
    "metadata": {
     "collapsed": false
