Some modifications for Camera-ready version code.

--- a/data_preprocessing/ADFTD_preprocessing.ipynb
+++ b/data_preprocessing/ADFTD_preprocessing.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "# root dir\n",
-    "root = 'ADFD/'\n",
+    "root = 'ADFTD/'\n",
     "# participants file path\n",
     "participants_path = os.path.join(root, 'participants.tsv')\n",
     "participants = pd.read_csv(participants_path, sep='\\t')\n",
